--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,1 +1,5 @@
-@import 'reset', 'mixins', 'colors';
+@import 'reset';
+@import 'mixins';
+@import 'colors';
+@import 'question';
+@import 'sections';
