--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -159,7 +159,7 @@ body {
   color: var(--white);
   background: var(--primary);
   /* (Opcional) */
-  hyphens: auto;
+  hyphens: none;
   /* (Opcional) */
   font-smooth: always;
   /* (Opcional) */
