--- a/src/styles/_question.scss
+++ b/src/styles/_question.scss
@@ -9,14 +9,23 @@ $text: #201f20;
 $subtext: #a39fa2;
 
 .question {
-  @include flex(column, center, space-around, flex-start);
+  @include flex(column, center, space-between, flex-start);
 
   padding: 2rem;
   background-color: $white;
   border-radius: 2rem;
-  max-width: 50%;
+  width: 50%;
+  height: 80vh;
 
   color: $text;
+  transition: width 200ms linear;
+
+  @include media(1024px) {
+    width: 70%;
+  }
+  @include media(768px) {
+    width: 100%;
+  }
   &__answer {
     // Not needed
   }
@@ -63,9 +72,11 @@ $subtext: #a39fa2;
 
   &__container {
     // Card container
-    @include flex(column, flex-start, flex-start, stretch);
+    @include flex(column, flex-start, center, stretch);
     gap: 1rem;
     width: 100%;
+    height: 100%;
+    overflow: auto;
   }
 
   &__input {
@@ -103,10 +114,41 @@ $subtext: #a39fa2;
   &__question {
     @include font(2rem, 600, normal);
     color: $text;
+    white-space: pre-line;
+    transition: all 200ms linear;
+    overflow: auto;
+
+    &::-webkit-scrollbar {
+      width: 8px;
+      height: 8px;
+      background: $subtext;
+      border-radius: 20px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      border-radius: 20px;
+      background: $secondary;
+    }
+
+    @include media(425px) {
+      font-size: 1.3rem;
+    }
   }
   &__subtitle {
     @include font(0.8rem, 400, normal);
     color: $subtext;
     align-self: flex-start;
   }
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+  background: $subtext;
+  border-radius: 20px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 20px;
+  background: $secondary;
 }
