--- a/src/styles/_question.scss
+++ b/src/styles/_question.scss
@@ -22,6 +22,7 @@ $subtext: #a39fa2;
 
   @include media(1024px) {
     width: 70%;
+    height: 70vh;
   }
   @include media(768px) {
     width: 100%;
