--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -179,6 +179,7 @@ body {
   border-radius: 2rem;
   width: 50%;
   height: 80vh;
+  max-height: 840px;
   color: #201f20;
   transition: width 200ms linear;
 }
@@ -277,11 +278,6 @@ body {
   display: none;
   border-radius: 0.4rem;
 }
-.question__input:checked + label {
-  background-color: rgba(6, 72, 252, 0.3);
-  border: 2px solid #0648fc;
-  border-width: 2px;
-}
 .question__label {
   cursor: pointer;
   display: flex;
@@ -297,8 +293,17 @@ body {
   cursor: pointer;
   transition: background-color 200ms linear;
 }
+.question__label--correct {
+  background-color: rgba(61, 233, 78, 0.3);
+  border: 2px solid #3de94e;
+}
+.question__label--incorrect {
+  background-color: rgba(233, 76, 61, 0.3);
+  border: 2px solid #e94c3d;
+}
 .question__label:hover {
   background-color: rgba(6, 72, 252, 0.3);
+  border-color: #0648fc;
 }
 .question__p {
   color: #201f20;
@@ -344,6 +349,9 @@ body {
   text-transform: normal;
   color: #a39fa2;
   align-self: flex-start;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
 }
 
 .main {
