Add: Now user can leave the trivia an return where he left

--- a/src/styles/_question.scss
+++ b/src/styles/_question.scss
@@ -127,9 +127,11 @@ $subtext: #a39fa2;
       border: 2px solid #e94c3d;
     }
 
-    &:hover {
-      background-color: rgba($color: $secondary, $alpha: 0.3);
-      border-color: $secondary;
+    @media (hover: hover) {
+      &:hover {
+        background-color: rgba($color: $secondary, $alpha: 0.3);
+        border-color: $secondary;
+      }
     }
   }
   &__p {
