--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -301,9 +301,11 @@ body {
   background-color: rgba(233, 76, 61, 0.3);
   border: 2px solid #e94c3d;
 }
-.question__label:hover {
-  background-color: rgba(6, 72, 252, 0.3);
-  border-color: #0648fc;
+@media (hover: hover) {
+  .question__label:hover {
+    background-color: rgba(6, 72, 252, 0.3);
+    border-color: #0648fc;
+  }
 }
 .question__p {
   color: #201f20;
