--- a/src/styles/_question.scss
+++ b/src/styles/_question.scss
@@ -57,9 +57,8 @@ $subtext: #a39fa2;
   &__button {
     cursor: pointer;
     padding: 1rem;
-    border: 1px solid $third;
+    border: 1px solid $secondary;
     border-radius: 1rem;
-    width: 100%;
     transition: transform 200ms linear;
 
     &:hover {
@@ -74,12 +73,23 @@ $subtext: #a39fa2;
     &--back {
       @include font(inherit, 600, inherit);
       border: none;
+      @include flex(row, center, center, center);
     }
+
     &--next {
       @include font(inherit, 600, inherit);
       color: $white;
 
       background-color: $secondary;
+      flex-grow: 1;
+    }
+
+    &--report {
+      border: none;
+      @include flex(row, center, center, center);
+      &:hover {
+        border: 1px solid #e94c3d;
+      }
     }
   }
 
