--- a/src/styles/_question.scss
+++ b/src/styles/_question.scss
@@ -107,13 +107,6 @@ $subtext: #a39fa2;
     cursor: pointer;
     display: none;
     border-radius: 0.4rem;
-
-    // This is to check the answer but it doesnt say if is correct or incorrect
-    // &:checked + label {
-    //   background-color: rgba($color: $secondary, $alpha: 0.3);
-    //   border: 2px solid $secondary;
-    //   border-width: 2px;
-    // }
   }
   &__label {
     cursor: pointer;
@@ -144,9 +137,33 @@ $subtext: #a39fa2;
       }
     }
   }
+
+  &__span {
+    background-color: $white;
+    border: 1px solid #e94c3d;
+    border-radius: 0.7rem;
+    color: $text;
+    height: 3rem;
+    line-height: 1rem;
+    opacity: 1;
+    padding: 1rem;
+    width: auto;
+    white-space: nowrap;
+    position: absolute;
+    top: -4rem;
+    left: 0;
+    z-index: 1;
+    font-weight: 500;
+    box-shadow: 2.8px 2.8px 2.2px rgba(0, 0, 0, 0.02),
+      6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028), 12.5px 12.5px 10px rgba(0, 0, 0, 0.035),
+      22.3px 22.3px 17.9px rgba(0, 0, 0, 0.042), 41.8px 41.8px 33.4px rgba(0, 0, 0, 0.05),
+      100px 100px 80px rgba(0, 0, 0, 0.07);
+  }
+
   &__p {
     color: $text;
   }
+
   &__question {
     @include font(1.7rem, 600, normal);
     color: $text;
