--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -182,6 +182,18 @@ body {
   max-height: 840px;
   color: #201f20;
   transition: width 200ms linear;
+  position: relative;
+}
+.question::after {
+  content: " ";
+  position: absolute;
+  width: 90%;
+  border-radius: 50px;
+  bottom: 0;
+  margin: 0 auto;
+  height: 35px;
+  z-index: -1;
+  box-shadow: 0px 12px 0px rgba(255, 255, 255, 0.3);
 }
 @media (max-width: 1024px) {
   .question {
@@ -278,6 +290,9 @@ body {
 .question__button--report:hover {
   border: 1px solid #e94c3d;
 }
+.question__button--report:hover span {
+  opacity: 1;
+}
 .question__container {
   display: flex;
   flex-direction: column;
@@ -330,7 +345,7 @@ body {
   color: #201f20;
   height: 3rem;
   line-height: 1rem;
-  opacity: 1;
+  opacity: 0;
   padding: 1rem;
   width: auto;
   white-space: nowrap;
