--- a/src/styles/_question.scss
+++ b/src/styles/_question.scss
@@ -20,6 +20,19 @@ $subtext: #a39fa2;
 
   color: $text;
   transition: width 200ms linear;
+  position: relative;
+
+  &::after {
+    content: ' ';
+    position: absolute;
+    width: 90%;
+    border-radius: 50px;
+    bottom: 0;
+    margin: 0 auto;
+    height: 35px;
+    z-index: -1;
+    box-shadow: 0px 12px 0px rgba(255, 255, 255, 0.3);
+  }
 
   @include media(1024px) {
     width: 70%;
@@ -89,6 +102,9 @@ $subtext: #a39fa2;
       @include flex(row, center, center, center);
       &:hover {
         border: 1px solid #e94c3d;
+        & span {
+          opacity: 1;
+        }
       }
     }
   }
@@ -145,7 +161,7 @@ $subtext: #a39fa2;
     color: $text;
     height: 3rem;
     line-height: 1rem;
-    opacity: 1;
+    opacity: 0;
     padding: 1rem;
     width: auto;
     white-space: nowrap;
