Change: changed some questions
Add: added styles to final popup and info about the % of correct and incorrect

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -405,6 +405,14 @@ body {
   width: 100%;
 }
 
+.border-radius-32 {
+  border-radius: 2rem;
+}
+
+.border-radius-16 {
+  border-radius: 0.5rem;
+}
+
 .main {
   width: 90%;
   max-width: 1200px;
