--- a/src/styles/_question.scss
+++ b/src/styles/_question.scss
@@ -216,3 +216,11 @@ $subtext: #a39fa2;
     width: 100%;
   }
 }
+
+//SWEETALERT
+.border-radius-32 {
+  border-radius: 2rem;
+}
+.border-radius-16 {
+  border-radius: 0.5rem;
+}
